[WebUI] Fix an unvisible marker

--- a/src/Utilities/BinExplorer/WebUI/css/util.css
+++ b/src/Utilities/BinExplorer/WebUI/css/util.css
@@ -73,7 +73,7 @@ html, body {
         font-size: 17px;
         color: white;
         right: 5px;
-        top: 10px; 
+        top: 10px;
         cursor: pointer; }
 
 #id_FunctionsListWrapper {
@@ -89,17 +89,10 @@ html, body {
     box-sizing: border-box;
     width: 100%;
     color: white;
-<<<<<<< HEAD
-    padding: 5px;
-    padding-left: 10px;
-    height: 35px; 
-    margin: 5px 0; }
-=======
     padding: 5px 10px;
     height: 35px;
     padding: 5px 10px;
     border-radius: 3px; }
->>>>>>> 89d63a0... [WebUI] Add a toggle switch between IR and Disasm
   #id_FunctionsListWrapper #id_FunctionsList {
     height: 100%;
     overflow-y: auto; }
